@@ -26,6 +26,10 @@ IN DEVELOPMENT
     * Avoid muttering every time a child update does not cause a progress bar
       update. (John Arbash Meinel, #213771)
 
+    * Set SO_REUSEADDR on server sockets of ``bzr serve`` to avoid problems
+      rebinding the socket when starting the server a second time.
+      (John Arbash Meinel, Martin Pool, #164288)
+
     * Severe performance degradation in fetching from knit repositories to
       knits and packs due to parsing the entire revisions.kndx on every graph
       walk iteration fixed by using the Repository.get_graph API.  There was
